--- a/23 how to create email signature using by html/index.html
+++ b/23 how to create email signature using by html/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <br/><br/><br/><br/><br/><br/>
-    <table border="0" cellspacing="0" cellpadding="0" style="border:1px dolid #c7c7c7; background-color: #F3F3F3; padding: 10px">
+    <table border="0" cellspacing="0" cellpadding="0" style="border:1px dolid #c7c7c7; background-color: #F3F3F3; padding: 10px;margin: 20px auto;">
         <tr>
             <td valign="top" align="left" style="vertical-align: top; padding-right: 10px;">
-                <img src="img/med.jpg" alt="img" style="width:130px" border="0"/>
+                <img src="img/med.jpg" alt="img" style="width:130px; border-radius: 5px;" border="0"/>
             </td>
             <td valign="top" style="vertical-align: top; padding-left: 10px; border-left: 3px solid #3F51B5; text-align:left">
                 <h3  style="color: #3F51B5; margin: 0; font-size: 17px; font-family: arial;">Mohammed Away Toumi</h3>
@@ -26,13 +26,13 @@
                     <span style="color: #3F51B5;">a:</span>Sfax, Tunisia
                 </p>
                 <p style="margin: 10px 0px 0px;">
-                    <a href="" style="text-decoration: none;">
+                    <a href="https://www.linkedin.com/in/mohammed-away-toumi-b11351189/" target="_blank" style="text-decoration: none;">
                         <img src="img/linkedin.png" alt="img" style="width: 25px; display: inline-block; margin-right: 4px;" border="0"/>
                     </a>
-                    <a href="" style="text-decoration: none;">
+                    <a href="https://twitter.com/ToumiAway" target="_blank" style="text-decoration: none;">
                         <img src="img/twitter.png" alt="img" style="width: 25px; display: inline-block; margin-right: 4px;" border="0"/>
                     </a>   
-                    <a href="" style="text-decoration: none;">
+                    <a href="https://www.youtube.com/" target="_blank" style="text-decoration: none;">
                         <img src="img/youtbe.png" alt="img" style="width: 25px; display: inline-block; margin-right: 4px;" border="0"/>
                     </a>
                 </p>
